[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description = "Lab 4.1"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"
SQLAlchemy = "^1.4.27"
eventlet = "^0.33.0"
simple-websocket = "^0.4.0"
Flask-SocketIO = "^5.1.1"
Flask-JWT = "^0.3.2"

